--- a/src/css/style.css
+++ b/src/css/style.css
@@ -64,6 +64,10 @@ ul li.active a {
   border-bottom: 15px;
 }
 
+.card_profil {
+  max-height: 720px;
+}
+
 .card-body {
   padding: 2rem;
 }
@@ -352,6 +356,15 @@ thead {
   font-weight: 800;
 }
 
+ /* Default styles for the input field */
+ .custom-number {
+  width: 300px; /* Take up 100% of the available width */
+  box-sizing: border-box; /* Include padding and border in the width calculation */
+}
+
+/* Media query for smaller screens */
+@media screen and (max-width: 600px) {
 .custom-number {
-  width: 300px; /* Set the width to auto to fit the content */
+    width: 200px; /* Adjust the width for smaller screens */
+  }
 }
